1. hide framebuttons(min,max,close); 2. set devtools to false; 3. added sandbox arg for npm start

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "package": "electron-forge package",
         "precommit": "pretty-quick --staged",
         "prepare": "cd .. && husky install .husky",
-        "start": "electron-forge start",
+        "start": "electron-forge start -- --no-sandbox",
         "test": "jest",
         "todesktop:beforeInstall": "./scripts/beforeInstall.js"
     },
